Initial implementation of XOSPWorld
- Add Dashboard category
- Initial bring up of the MM classes (except About)
- Add XOSP Settings
- N adaptions

Signed-off-by: Calin <nilac8991@gmail.com>

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -130,8 +130,16 @@
 
         <activity android:name=".Settings$WirelessSettings"
             android:label="@string/header_category_wireless_networks">
-            <intent-filter android:priority="4">
+            <intent-filter android:priority="5">
                 <action android:name="com.android.settings.category.wireless" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
+
+        <activity android:name=".Settings$XOSPMain"
+            android:label="@string/xosp_settings_header">
+            <intent-filter android:priority="4">
+                <action android:name="com.android.settings.category.xosp" />
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
@@ -179,6 +187,39 @@
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
+
+        <!-- XOSPSettings -->
+        <activity android:name="Settings$XOSPWorld"
+                android:label="@string/xosp_settings_main_title"
+                android:icon="@drawable/ic_xosp_main"
+                android:taskAffinity="">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="com.android.settings.SHORTCUT" />
+            </intent-filter>
+            <intent-filter android:priority="3">
+                <action android:name="com.android.settings.action.SETTINGS" />
+            </intent-filter>
+            <meta-data android:name="com.android.settings.category"
+                android:value="com.android.settings.category.xosp" />
+            <meta-data android:name="com.android.settings.FRAGMENT_CLASS"
+                android:value="com.android.settings.xosp.ProcessStatsSummary" />
+        </activity>
+ 
+       <!-- Keep compatibility with old shortcuts. -->
+        <activity android:name="Settings$XOSPWorld"
+                  android:label="@string/xosp_settings_main_title"
+            android:taskAffinity="">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+            <meta-data android:name="com.android.settings.FRAGMENT_CLASS"
+                android:value="com.android.settings.xosp.XOSPMain" />
+        </activity>
+
+        <activity
+             android:name=".xosp.XOSPMain" />
 
         <!-- Wireless Controls -->
 
