--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -88,6 +88,8 @@
     <uses-permission android:name="cyanogenmod.permission.WRITE_SETTINGS" />
     <uses-permission android:name="cyanogenmod.permission.MANAGE_REMOTE_PREFERENCES" />
 
+    <protected-broadcast android:name="android.intent.action.UPDATE_POWER_MENU" />
+    
     <application android:label="@string/settings_label"
             android:icon="@mipmap/ic_launcher_settings"
             android:taskAffinity=""
